--- a/config.toml
+++ b/config.toml
@@ -55,13 +55,15 @@ weight = 3
 blogPageURL = "blog"
 contactLink = "contact"
 copyright = "All rights reserved © Rocket Badger Technology Ltd 2022"
+vatNumber = "400004487"
+registrationNumber = "13835178"
 footerLogo = "images/contact/widget-logo.png"
 formspreeURL = "YOUR FORMSPREE URL"
 googleAnalytics = "YOUR GOOGLE ANALYTICS CODE"
 logo = "images/site-navigation/logo.png"
 
 [params.address]
-#address = "23 Khan Niketon, Grand Street, NYK."
+address = "Unit 36 Silk Mill Industrial Estate, Brook Street, Tring, United Kingdom, HP23 5EF"
 email = "hello@rocketbadger.com"
 #openingHours = "Open from 10am to 6pm (close at 5pm Sundays)"
 #phone = "+(448) 833 5272 332"
@@ -85,7 +87,7 @@ weight = 2
 #icon = "fa-pinterest-square"
 #url = "https://www.pinterest.com/"
 #weight = 3
-#[[params.social]]
-#icon = "fa-twitter-square"
-#url = "https://twitter.com/"
-#weight = 4
+[[params.social]]
+icon = "fa-twitter-square"
+url = "https://twitter.com/rocketbadgeruk"
+weight = 4
